# vms-project

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  meson.build
backend/: main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
src/: avoptions.hpp  logger.hpp  streamer.cpp  utils.hpp
